# ccminernew22

./: Bos  Brewfile  Makefile.am  README-ANDROID.md  README.md  api.cpp  autogen.sh  bench.cpp  build-freebsd.sh  build.sh  ccminer.cpp  ccminer.vcxproj  command.txt  configure.ac  configure.sh  miner.h  run  sse2neon.h  stats.cpp  util.cpp
.circleci/: config.yml
.github/workflows/: main.yml  makefile.yml
api/: websocket.htm
depends/: Makefile  README.md
depends/builders/: darwin.mk
depends/hosts/: darwin.mk  linux.mk  mingw32.mk
equi/: equi-stratum.cpp
verus/: haraka.c  haraka.h  haraka_portable.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verusscan.cpp
